# plz-to-nuts

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: release.yml
plz_to_nuts/: __main__.py  main.py  plz2nuts.py  setup.py
tests/: __init__.py
