[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "plz-to-nuts"
version = "0.1.0"
authors = [
    { name = "Jonathan Sejdija", email = "sejdija@fh-aachen.de" }
]
description = "A Python package to convert German ZIP codes to NUTS IDs."
readme = "README.md"
license = { file = "LICENSES/AGPL-3.0-or-later.txt" }
requires-python = ">=3.7"
dependencies = ["pgeocode"]

[project.urls]
Documentation = "https://github.com/NOWUM/plz-to-nuts"

[project.scripts]
plz2nuts = "plz_to_nuts.main:plz2nuts_cli"

[tool.setuptools]
packages = ["plz_to_nuts"]