[metadata]
name = plz-to-nuts
version = 0.1.0
author = Jonathan Sejdija
author_email = sejdija@fh-aachen.de
description = A Python package to convert German ZIP codes to NUTS IDs.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSES/AGPL-3.0-or-later.txt

[options]
packages = find:
package_dir =
    = plz_to_nuts
python_requires = >=3.7
install_requires =
    pgeocode

[options.entry_points]
console_scripts =
    plz2nuts = plz_to_nuts.main:plz2nuts_cli

[options.packages.find]
where = plz_to_nuts
